Making AudioInputDeviceManager to return UnavailableDeviceParameters when there are no physical input devices.

BUG=733356

Review-Url: https://codereview.chromium.org/2948233002
Cr-Commit-Position: refs/heads/master@{#481510}

Former-commit-id: d9a4e3e3f860fb848ce36deea29f0d685c6d81c6